# hadess-sensorfw-proxy

./: 10-hadess-sensorfw-proxy.conf  CMakeLists.txt  hadess-sensorfw-proxy.service  iio-sensor-proxy-resources.cpp  iio-sensor-proxy-resources.h  iio-sensor-proxy.cpp  main.cpp  orientation.cpp  orientation.h
debian/: changelog  control  copyright  hadess-sensorfw-proxy.dirs  hadess-sensorfw-proxy.install  hadess-sensorfw-proxy.postinst  hadess-sensorfw-proxy.postrm  hadess-sensorfw-proxy.prerm
sensorfw-core/: CMakeLists.txt  accelerometer_sensor.h  compass_sensor.h  console_log.h  dbus_event_loop.h  event_loop_handler_registration.h  light_sensor.h  orientation_sensor.h  sensorfw_accelerometer_sensor.cpp  sensorfw_accelerometer_sensor.h  sensorfw_common.cpp  sensorfw_common.h  sensorfw_compass_sensor.cpp  sensorfw_compass_sensor.h  sensorfw_orientation_sensor.cpp  sensorfw_orientation_sensor.h  sensorfw_proximity_sensor.h  socketreader.h
